name: cas
version: 0.1
license: BSD3
license-file: LICENSE
copyright: (c) Braden Shepherdson
author: Braden Shepherdson
maintainer: Braden Shepherdson
bug-reports: https://github.com/shepheb/cas/issues
stability: stable
homepage: https://github.com/shepheb/cas
synopsis: DCPU-16 1.7 assembler, can generate relocation tables.
category: Development
cabal-version: >= 1.2.3

build-type: Simple

executable cas
    build-depends: base >= 4.3 && < 5
                 , parsec >= 3 && < 4
                 , bytestring >= 0.9.2
                 , binary >= 0.5
                 , containers >= 0.4
    extensions: GeneralizedNewtypeDeriving, ExistentialQuantification, BangPatterns, NoMonomorphismRestriction
    main-is: Assembler.hs
